--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ip": "^1.1.8"
   },
   "devDependencies": {
-    "electron": "26.2.2",
+    "electron": "^27.0.0",
     "electron-builder": "^24.6.3"
   },
   "build": {
